--- a/.dockerignore
+++ b/.dockerignore
@@ -1,8 +1,7 @@
 .DS_Store
 __pycache__/
-*.log
 .env
-venv/
+venv
 sketch-ds
 test-img
 test
@@ -10,3 +9,9 @@ test
 .gitignore
 .git
 .idea
+src/deployment/logs
+src/data-process
+src/deployment/model_store/drawclassifier.mar
+src/deployment/mobile_net_scripted.pt
+src/training
+src/utils
