--- a/.gitignore
+++ b/.gitignore
@@ -130,10 +130,14 @@ cython_debug/
 /sketch-ds/
 /test-img/
 /test/
-/src/deployment/model_store/drawclassifier.mar
+/src/deployment/v1/model_store/drawclassifier.mar
 /src/deployment/mobile_net_scripted.pt
 /.idea/
 /.run/
 /src/deployment/logs/
 /src/data-process/data.csv.gz
-/src/deployment/model_store/draw_classifier.mar
+/src/deployment/v1/model_store/draw_classifier.mar
+/src/deployment/v2/best_model.pt
+/src/deployment/v2/model_store/draw_classifier.mar
+/src/visualize-training-logs/
+.gitignore
