--- a/src/deployment/config.properties
+++ b/src/deployment/config.properties
@@ -1,4 +1,5 @@
 inference_address=http://0.0.0.0:8080
 management_address=http://0.0.0.0:8081
 metrics_address=http://0.0.0.0:8082
-default_workers_per_model=1
+job_queue_size=1000
+async_logging=true
